plugins {
	id 'org.springframework.boot' version '2.3.2.RELEASE'
	id 'io.spring.dependency-management' version '1.0.9.RELEASE'
	id 'java'
	id 'war'
}

group = 'com.matchadb'
version = 'betav1.0.2-SNAPSHOT'
sourceCompatibility = '14'

repositories {
	mavenCentral()
}

dependencies {
	//implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-websocket'
	implementation 'com.googlecode.json-simple:json-simple:1.1.1'
	providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
	testImplementation('org.springframework.boot:spring-boot-starter-test') {
		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
	}
	//testImplementation 'org.springframework.security:spring-security-test'
	testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.2'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.6.2'
}

/**
 * TODO
 * A method that builds the Instrumentation jar for MatchaDB. 
 */
task buildInstrumentationJar2(type: Exec) {
	commandLine 'javac', 'src/main/java/com/matchadb/instrumentation/MatchaDbInstrumentationTool.java'	
	commandLine 'jar', 'cmf', 'resources/MANIFEST.MF', 'resources/MatchaDbInstrumentationTool.jar', 'src/main/java/com/matchadb/instrumentation/MatchaDbInstrumentationTool.class'
}

tasks.withType(JavaCompile) {
    options.compilerArgs.add("--enable-preview")
}

test {
	// TODO: Determine error with improper VM instantiation.
	// jvmArgs "-javaagent:resources/MatchaDbInstrumentationTool.jar"
	jvmArgs (["--enable-preview"])
	useJUnitPlatform()
}
